# SimulacionFisicaVideojuegos

./: .gitignore  CMakeLists.txt  README.md  rebuild.bat
resources/: flashLight.mtl
resources/blender/: rainDrop.mtl  rainDropGLB.glb  untitled.mtl  water.glb
resources/fbx/bloody-bathtub-game-ready/source/: model.dae
resources/glb/: boat.glb  free_stalker_barrel_pack_-_low-poly_props.glb  low_poly_water_drop.glb  tabla.glb  tabla1.glb  water.glb
resources/shaders/: basic.vert  basic_fragment.glsl  basic_vertex.glsl  light_fragment.glsl  light_vertex.glsl  pbr_fragment.glsl  pbr_vertex.glsl  texture_light_vertex.glsl  translucid_fragment.glsl  translucid_vertex.glsl  wave_vertex.glsl
skeleton/: CannonBall.cpp  CannonBall.h  Constants.h  CoordAxis.cpp  CoordAxis.h  GaussianParticleGenerator.cpp  GaussianParticleGenerator.h  GuassianParticleGenerator.cpp  GuassianParticleGenerator.h  Particle.cpp  Particle.h  ParticleGenerator.cpp  ParticleGenerator.h  ParticleSystem.cpp  ParticleSystem.h  ParticleWithMass.cpp  ParticleWithMass.h  Policies.cpp  Policies.h  README.md  RainParticle.cpp  RainParticle.h  RainSystem.cpp  RainSystem.h  RenderUtils.cpp  RenderUtils.hpp  UniformParticleGenerator.cpp  UniformParticleGenerator.h  Vector3D.cpp  Vector3D.h  game.vcxproj  game.vcxproj.filters  main.cpp
skeleton/include/: Constants.h  Geometry.h  PhysicalObject.h  PhysxGeometry.cpp  PhysxGeometry.h  core.hpp
skeleton/include/app/: GameApp.h
skeleton/include/app/gameplay/: CylinderTestScene.h  RopeTestScene.h  Scene01.h  SceneBuoyance.h  SceneSpring.h  SceneSurfer.h  SpringTestScene.h  WakeboardScene.h
skeleton/include/core/: Constants.h  Geometry.h  ObjectGenerator.h  ObjectPool.h  ObjectSystem.h  Region.h  ResourceLocator.h
skeleton/include/core/generators/: ConstantGenerator.h  GaussianGenerator.h  Policies.h  UniformGenerator.h
skeleton/include/engine/physics/: PhysicalObject.h  PhysicsEngine.h  PhysxGeometry.h  callbacks.hpp
skeleton/include/engine/physics/force/: ForceGenerator.h  ForceManager.h
skeleton/include/engine/physics/particle/: Particle.h  ParticleGenerator.h  ParticlePool.h  ParticleSystem.h
skeleton/include/engine/physics/rigidbody/: RigidBody.h  RigidBodyGenerator.h  RigidBodyPool.h  RigidBodySystem.h
skeleton/include/engine/render/: Render.h  RenderUtils.hpp
skeleton/include/engine/render/openGL/: Camera.h  Entity.h  EntityRenderable.h  GLRenderEngine.h  Material.h  Mesh.h  PBRMaterial.h  Shader.h  Texture.h
skeleton/include/engine/scene/: Scene.h  SceneManager.h
skeleton/include/force/: ForceGenerator.h  ForceManager.h
skeleton/include/force/generators/: ForceField.h  ForcePair.h
skeleton/include/force/types/: GlobalForce.h  GravitationalForce.h  HurricaneForce.h  WindForce.h  WindRegionForce.h
skeleton/include/force/types/regional/: ExplosionForce.h  HurricaneForce.h  RegionalForce.h  WindRegionForce.h
skeleton/include/framework/: ApplicationContext.h  IInputEventListener.h  IWindowEventListener.h  IWindowSystem.h  InputKeys.h  InputManager.h
skeleton/include/framework/glfw/: GLFWWindowSystem.h
skeleton/include/particle/: Particle.h  ParticleGenerator.h  ParticlePool.h  ParticleSystem.h
skeleton/include/particle/generators/: ConstantParticleGenerator.h  GaussianParticleGenerator.h  UniformParticleGenerator.h
skeleton/include/particle/policies/: Policies.h
skeleton/include/particle/systems/: EnemySystem.h  GridSystem.h  GunSystem.h  RainSystem.h
skeleton/include/particle/systems/scenary/: BoxSystem.h  WorldSystem.h
skeleton/include/particle/systems/scenery/: CurveSystem.h  GridSystem.h  MeshSystem.h
skeleton/include/particle/types/: Bullet.h  ParticleWithMass.h  RainParticle.h  StaticParticle.h
skeleton/include/render/: Camera.h  RenderUtils.hpp
skeleton/include/utils/: GridSystem.h  MathUtils.h  MeshData.h  Region.h  Stats.h
skeleton/src/: PhysicalObject.cpp  main.cpp
skeleton/src/app/: GameApp.cpp  main.cpp
skeleton/src/app/gameplay/: CylinderTestScene.cpp  RopeTestScene.cpp  Scene01.cpp  SceneBuoyance.cpp  SceneSpring.cpp  SceneSurfer.cpp  SpringTestScene.cpp  WakeboardScene.cpp
skeleton/src/core/: Geometry.cpp  ObjectGenerator.cpp  ObjectSystem.cpp  ResourceLocator.cpp
skeleton/src/core/generators/: Policies.cpp
skeleton/src/engine/physics/: PhysicsEngine.cpp  PhysxGeometry.cpp  callbacks.cpp
skeleton/src/engine/physics/force/: ForceGenerator.cpp
skeleton/src/engine/physics/particle/: Particle.cpp  ParticleGenerator.cpp  ParticleSystem.cpp  StaticParticle.cpp
skeleton/src/engine/physics/rigidbody/: RigidBody.cpp  RigidBodySystem.cpp
skeleton/src/engine/render/: RenderUtils.cpp
skeleton/src/engine/render/openGL/: Camera.cpp  Entity.cpp  EntityRenderable.cpp  GLRenderEngine.cpp  Material.cpp  Mesh.cpp  PBRMaterial.cpp  Shader.cpp  Texture.cpp
skeleton/src/engine/scene/: Scene.cpp  SceneManager.cpp
skeleton/src/force/: ForceGenerator.cpp  ForceManager.cpp
skeleton/src/force/generators/: ForceContact.cpp  ForceField.cpp  ForcePair.cpp
skeleton/src/force/types/: GlobalForce.cpp  GravitationalForce.cpp  HurricaneForce.cpp  WindForce.cpp  WindRegionForce.cpp
skeleton/src/force/types/regional/: ExplosionForce.cpp  HurricaneForce.cpp  RegionalForce.cpp  WindRegionForce.cpp
skeleton/src/framework/: ApplicationContext.cpp  InputManager.cpp
skeleton/src/framework/glfw/: GLFWWindowSystem.cpp
skeleton/src/particle/: Particle.cpp  ParticleGenerator.cpp  ParticleSystem.cpp  StaticParticle.cpp
skeleton/src/particle/generators/: ConstantParticleGenerator.cpp  GaussianParticleGenerator.cpp
skeleton/src/particle/policies/: Policies.cpp
skeleton/src/particle/systems/: EnemySystem.cpp  GridSystem.cpp  GunSystem.cpp  RainSystem.cpp
skeleton/src/particle/systems/scenary/: WorldSystem.cpp
skeleton/src/particle/systems/scenery/: BoxSystem.cpp  GridSystem.cpp  MeshSystem.cpp  (+1 more)
skeleton/src/particle/types/: Bullet.cpp  CannonBall.cpp  ParticleWithMass.cpp  RainParticle.cpp
skeleton/src/render/: Camera.cpp  Render.cpp  RenderUtils.cpp
skeleton/src/utils/: GridSystem.cpp  MeshData.cpp
(+74 files in other folders)
